--- a/Notebooks/OpenCV-Fundamentals--Image-Processing-&-Computer-Vision.ipynb
+++ b/Notebooks/OpenCV-Fundamentals--Image-Processing-&-Computer-Vision.ipynb
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8341b517",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import annotations\n",
+    "from __future__ import annotations \n",
     "\n",
     "import os\n",
     "from typing import Tuple\n",
@@ -52,29 +52,22 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Project constants\n",
-    "DATA_DIR = \"Data\"  # expect images to be here relative to the notebook\n",
-    "\n",
+    "DATA_DIR = \"../Data\"\n",
     "\n",
     "def img_path(name: str) -> str:\n",
-    "    \"\"\"Build a path to an image inside the Data folder.\"\"\"\n",
+    "    \"\"\"Return full path to an image inside the Data folder.\"\"\"\n",
     "    return os.path.join(DATA_DIR, name)\n",
     "\n",
-    "\n",
     "def load_bgr(name: str) -> np.ndarray:\n",
-    "    \"\"\"Load an image from Data/ in BGR format (OpenCV default).\n",
-    "    Raises a clear error message if the file isn't found.\n",
-    "    \"\"\"\n",
-    "    path = img_path(name)\n",
+    "    \"\"\"Always load an image from the Data/ folder (relative to this notebook).\"\"\"\n",
+    "    path = os.path.join(\"../Data\", name)   # force search in ../Data\n",
     "    img = cv2.imread(path)\n",
     "    if img is None:\n",
-    "        raise FileNotFoundError(f\"Could not read {path}. Ensure the file exists in ./Data.\")\n",
+    "        raise FileNotFoundError(f\"Could not read {path}. Make sure the file exists in Data/\")\n",
     "    return img\n",
     "\n",
-    "\n",
     "def bgr_to_rgb(img_bgr: np.ndarray) -> np.ndarray:\n",
-    "    \"\"\"Convert OpenCV BGR image to RGB for matplotlib display.\"\"\"\n",
     "    return cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB)\n",
-    "\n",
     "\n",
     "def show(img: np.ndarray, title: str = \"\", cmap: str | None = None):\n",
     "    \"\"\"Convenience display helper. Accepts grayscale or color images (RGB).\"\"\"\n",
@@ -100,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e90ec051",
    "metadata": {},
    "outputs": [
@@ -144,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0131d5aa",
    "metadata": {},
    "outputs": [
@@ -188,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "35b314de",
    "metadata": {},
    "outputs": [
@@ -248,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f0bd9303",
    "metadata": {},
    "outputs": [
@@ -276,7 +269,10 @@
    "source": [
     "import cv2, numpy as np, matplotlib.pyplot as plt\n",
     "\n",
-    "img = cv2.imread(\"Data/opencv-logo.png\", cv2.IMREAD_UNCHANGED)  # BGRA if PNG has alpha\n",
+    "DATA_DIR = \"../Data\"\n",
+    "img_path = os.path.join(DATA_DIR, \"opencv-logo.png\")\n",
+    "\n",
+    "img = cv2.imread(img_path, cv2.IMREAD_UNCHANGED)  # BGRA if PNG has alpha\n",
     "if img is None:\n",
     "    raise FileNotFoundError\n",
     "\n",
@@ -313,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "987253da",
    "metadata": {},
    "outputs": [
@@ -359,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "196dd839",
    "metadata": {},
    "outputs": [
@@ -419,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "268ebc72",
    "metadata": {},
    "outputs": [
@@ -435,11 +431,11 @@
     }
    ],
    "source": [
-    "thresh_gray = cv2.imread(img_path(\"thresh.jpg\"), cv2.IMREAD_GRAYSCALE)\n",
+    "thresh_gray = cv2.imread(os.path.join(\"../Data\", \"thresh.jpg\"), cv2.IMREAD_GRAYSCALE)\n",
     "if thresh_gray is None:\n",
-    "    raise FileNotFoundError(\"Could not read Data/thresh.jpg.\")\n",
+    "    raise FileNotFoundError(\"Could not read ../Data/thresh.jpg.\")\n",
     "\n",
-    "blurred = cv2.GaussianBlur(thresh_gray, (5, 5), 0)\n",
+    "blurred = cv2.GaussianBlur(thresh_gray, (5, 5), 0) \n",
     "\n",
     "# Binary threshold (values can be tuned per dataset)\n",
     "_, binary = cv2.threshold(blurred, 5, 55, cv2.THRESH_BINARY)\n",
@@ -484,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7b2cf70a",
    "metadata": {},
    "outputs": [
@@ -556,9 +552,11 @@
     "RUN_GUI = True  # set to True when running locally with GUI support\n",
     "\n",
     "if RUN_GUI:\n",
-    "    cam_gray = cv2.imread(img_path(\"cameraman.jpg\"), cv2.IMREAD_GRAYSCALE)\n",
+    "    cam_path = os.path.join(\"../Data\", \"cameraman.jpg\")\n",
+    "    cam_gray = cv2.imread(cam_path, cv2.IMREAD_GRAYSCALE)\n",
     "    if cam_gray is None:\n",
-    "        raise FileNotFoundError(\"Could not read Data/cameraman.jpg.\")\n",
+    "        raise FileNotFoundError(f\"Could not read {cam_path}. Make sure it exists in Data/\")\n",
+    "\n",
     "    canvas = cv2.cvtColor(cam_gray, cv2.COLOR_GRAY2BGR).copy()\n",
     "\n",
     "    def on_mouse(event, x, y, flags, param):\n",
@@ -591,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "68a5c75b",
    "metadata": {},
    "outputs": [
